--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,14 +1,26 @@
 {
   "name": "core",
   "version": "1.0.0",
-  "description": "core package",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "description": "> TODO: description",
+  "author": "liuzeyang <331341107@qq.com>",
+  "homepage": "https://github.com/liuzeyang/eden-clubs#readme",
+  "license": "ISC",
+  "main": "lib/core.js",
+  "directories": {
+    "lib": "lib",
+    "test": "__tests__"
   },
-  "keywords": [
-    "core"
+  "files": [
+    "lib"
   ],
-  "author": "jasonlzy",
-  "license": "ISC"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/liuzeyang/eden-clubs.git"
+  },
+  "scripts": {
+    "test": "echo \"Error: run tests from root\" && exit 1"
+  },
+  "bugs": {
+    "url": "https://github.com/liuzeyang/eden-clubs/issues"
+  }
 }
