--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -22,5 +22,8 @@
   },
   "bugs": {
     "url": "https://github.com/liuzeyang/eden-clubs/issues"
+  },
+  "dependencies": {
+    "reflect-metadata": "^0.1.13"
   }
 }
