--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "core",
-  "version": "1.0.1",
+  "name": "utils",
+  "version": "1.0.0",
   "description": "> TODO: description",
   "author": "liuzeyang <331341107@qq.com>",
   "homepage": "https://github.com/liuzeyang/eden-clubs#readme",
   "license": "ISC",
-  "main": "lib/core.js",
+  "main": "lib/utils.js",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
@@ -22,10 +22,5 @@
   },
   "bugs": {
     "url": "https://github.com/liuzeyang/eden-clubs/issues"
-  },
-  "dependencies": {
-    "reflect-metadata": "^0.1.13",
-    "utils": "^1.0.0"
-  },
-  "gitHead": "fd79cb011c413a51dc1f17b3642377444aca8135"
+  }
 }
